@@ -35,13 +35,13 @@ The view doesn't actually give us the word, but we can replay an existing
 session for the test:
 
   >>> request = DummyRequest()
-  >>> session_id = '6552fec8867ee2a85a44784dda007e49efcf50ef'
+  >>> session_id = 'a3c189690379c1fe'
   >>> request.cookies[COOKIE_ID] = session_id
   >>> view = Captcha(context, request)
 
 The verify method, then, tells you if the user entered the correct word:
 
-  >>> view.verify('DLXV4XV')
+  >>> view.verify('FDX7BU3')
   True
   
 Note that the view immediately invalidates the cookie by expiring it:
@@ -51,14 +51,14 @@ Note that the view immediately invalidates the cookie by expiring it:
   
 The verify method works case-insensitively:
 
-  >>> view.verify('dlxv4xv')
+  >>> view.verify('fdx7BU3')
   True
   
-The words are valid for a 10 minute period, with a new word for the session
-every 5 minutes. Thus, the word for the previous 5 minute period should still
+The words are valid for an 8 minute period, with a new word for the session
+every 4 minutes. Thus, the word for the previous 4 minute period should still
 be valid:
 
-  >>> view.verify('EXCXY74')
+  >>> view.verify('7N6NWYP')
   True
 
 Verification will fail for both incorrect input and a missing cookie:
@@ -68,7 +68,7 @@ Verification will fail for both incorrect input and a missing cookie:
 
   >>> del request.other[COOKIE_ID]
   >>> del request.cookies[COOKIE_ID]
-  >>> view.verify('DLXV4XV')
+  >>> view.verify('FDX7BU3')
   False
 
 To facilitate displaying a new captcha when verification fails or validation 
